--- a/speisekarte.html
+++ b/speisekarte.html
@@ -15,6 +15,8 @@
 
 <body>
 
+  
+
   <div class="overtop container-sm">
 
 
@@ -27,7 +29,7 @@
 
     <nav class="navbar sticky-top navbar-expand-md navbar-light style">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           Home
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +39,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Speisekarte.html">Speisekarte</a>
+              <a class="nav-link active" aria-current="page" href="#">Speisekarte</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Info.html">Info</a>
@@ -64,7 +66,9 @@
 
     <div class="HoldPic">
 
-      <img src="images/LabelBlackBig.png" alt="" class="Label">
+
+
+      <h2>Fisch Rollen</h2>
 
 
 
@@ -75,7 +79,7 @@
   <div class="bottom container">
 
     <div class="d-grid gap-2">
-      <a class="btn btn-outline-secondary" href="speisekarte.html" type="button">Zur Speisekarte</a>
+      <a class="btn btn-outline-secondary" href="index.html" type="button">Home</a>
 
 
     </div>
